2013-09-07  Patrice Dumas  <pertusus@free.fr>

	* tp/texi2any.pl: handle plaintext as other formats to set 
	expanded formats.

2013-09-06  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm, 
	tp/Texinfo/Convert/HTML.pm(_convert_inline_command),
	tp/Texinfo/Convert/Plaintext.pm, tp/Texinfo/Convert/DocBook.pm,
	tp/Texinfo/Convert/Text.pm, tp/Texinfo/Common.pm, 
	tp/Texinfo/Convert/TexinfoXML.pm:
	implement @inlinefmtifelse, @inlineifclear, @inlineifset.

2013-09-01  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Info.pm (_node): warn if node name contains
	a comma.

2013-08-31  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Plaintext.pm: warn when cross-reference
	name contains a :, or node name contains a problematic character.
	Warn similarly when a menu entry name contains a :, or when the
	menu entry node contains a problematic character.

2013-08-27  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm: add \r to regexps to exclude it when 
	excluding newlines.  Report from Karl.

2013-08-26  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_bibtex): only run biber if
	</bcf:controlfile> is present in the bcf file.
	Allow override with BIBER envvar.
	Report from Jozef Vesely, 26 Aug 2013 14:26:26.

2013-08-26  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Plaintext.pm (_align_lines): correct byte count
	in flushleft and center.

2013-08-24  Karl Berry  <karl@gnu.org>  (tiny change)

	* util/texi2dvi (run_bibtex): run biber if .bcf file exists.
	(xref_files_changed): check for biblatex rerun warning.
	Report from Jozef Vesely, 24 Aug 2013 12:15:40.

2013-08-24  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Info.pm (output), 
	tp/Texinfo/Convert/Plaintext.pm: collect text before first node
	and output the same header for every Info output files using that
	text.  Based on a report from Juri Linkov and analysis of Sergey.
	Thread started at